# mlops-end-to-end-nyc-taxi

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  model_info.json  pyproject.toml  requirements.txt  tuning_cv_results.csv
.github/workflows/: ci.yml
feature_repo/taxi_features/: feature_store.yaml
feature_repo/taxi_features/data/: online_store.db  registry.db
feature_repo/taxi_features/feature_repo/: feature_definitions.py
feature_repo/taxi_features/feature_repo/data/: driver_stats.parquet  taxi_trip_source.py
mlops_end_to_end_taxi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: 01_eda.ipynb
reports/figures/maps/: script.py
reports/maps/: pickup_sample_map.html
src/: config.py
src/etl/: convert_csv_to_parquet.py  extract.py  load.py  run_etl.py  transform.py
tests/: test_config.py  test_etl.py
training/: model_training.py  train.py
